@@ -74,15 +74,35 @@ else
     echo "unadapted java version, please notice..."
 fi
 
+DEFAULT_CGROUP_MEM_OPTS=""
+if [ "$int_version" = '8' ] ; then
+	DEFAULT_CGROUP_MEM_OPTS=" -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:InitialRAMPercentage=80.0 -XX:MinRAMPercentage=80.0 -XX:MaxRAMPercentage=80.0 "
+else
+	DEFAULT_CGROUP_MEM_OPTS=" -XX:InitialRAMPercentage=80.0 -XX:MinRAMPercentage=80.0 -XX:MaxRAMPercentage=80.0 "
+fi
+
+CGROUP_MEM_OPTS="${CGROUP_MEM_OPTS:-${DEFAULT_CGROUP_MEM_OPTS}}"
+
 JAVA_OPTS=" -Djava.awt.headless=true "
 
-JAVA_MEM_OPTS=" -server -Xmx2g -Xms2g -Xmn1g -Xss1m -XX:AutoBoxCacheMax=4096 -XX:+UseNUMA -XX:+DisableExplicitGC -XX:LargePageSizeInBytes=128m ${VERSION_OPTS} -Dio.netty.leakDetection.level=DISABLED "
+DEFAULT_JAVA_MEM_COMMON_OPTS=" -Xmx2g -Xms2g -Xmn1g "
+if [ -n "${IS_DOCKER}" ]; then
+	JAVA_MEM_COMMON_OPTS="${CGROUP_MEM_OPTS}"
+else
+	JAVA_MEM_COMMON_OPTS="${JAVA_MEM_COMMON_OPTS:-${DEFAULT_JAVA_MEM_COMMON_OPTS}}"
+fi
+
+JAVA_MEM_OPTS=" -server ${JAVA_MEM_COMMON_OPTS} -Xss1m -XX:AutoBoxCacheMax=4096 -XX:+UseNUMA -XX:+DisableExplicitGC -XX:LargePageSizeInBytes=128m ${VERSION_OPTS} -Dio.netty.leakDetection.level=DISABLED "
+
+
+
 
 MAIN_CLASS=org.apache.shardingsphere.proxy.Bootstrap
 
 unset -v PORT
 unset -v ADDRESSES
 unset -v CONF_PATH
+unset -v FORCE
 
 print_usage() {
     echo "usage:"
@@ -97,6 +117,7 @@ print_usage() {
     echo "    comma-separated list. The default value is '0.0.0.0'."
     echo "-p  Bind port, default is '3307', which could be changed in server.yaml"
     echo "-c  Path to config directory of ShardingSphere-Proxy, default is 'conf'"
+    echo "-f  Force start ShardingSphere-Proxy"
     exit 0
 }
 
@@ -117,8 +138,8 @@ if [ $# == 0 ]; then
     CLASS_PATH=${DEPLOY_DIR}/conf:${CLASS_PATH}
 fi
 
-if [[ $1 == -a ]] || [[ $1 == -p ]] || [[ $1 == -c ]] ; then
-    while getopts ":a:p:c:" opt
+if [[ $1 == -a ]] || [[ $1 == -p ]] || [[ $1 == -c ]] || [[ $1 == -f ]] ; then
+    while getopts ":a:p:c:f" opt
     do
         case $opt in
         a)
@@ -130,6 +151,9 @@ if [[ $1 == -a ]] || [[ $1 == -p ]] || [[ $1 == -c ]] ; then
         c)
           echo "The configuration path is $OPTARG"
           CONF_PATH=$OPTARG;;
+        f)
+          echo "The force param is true"
+          FORCE=true;;
         ?)
           print_usage;;
         esac
@@ -154,13 +178,21 @@ if [ -z "$PORT" ]; then
     PORT=-1
 fi
 
+if [ -z "$ADDRESSES" ]; then
+    ADDRESSES="0.0.0.0"
+fi
+
+if [ -z "$FORCE" ]; then
+    FORCE=false
+fi
+
 CLASS_PATH=${CONF_PATH}:${CLASS_PATH}
-MAIN_CLASS="${MAIN_CLASS} ${PORT} ${CONF_PATH} ${ADDRESSES}"
+MAIN_CLASS="${MAIN_CLASS} ${PORT} ${CONF_PATH} ${ADDRESSES} ${FORCE}"
 
 echo "The classpath is ${CLASS_PATH}"
 echo "main class ${MAIN_CLASS}"
 
-if [ "${IS_DOCKER}" ]; then
+if [ -n "${IS_DOCKER}" ]; then
   exec $JAVA ${JAVA_OPTS} ${JAVA_MEM_OPTS} -classpath ${CLASS_PATH} ${MAIN_CLASS}
   exit 0
 fi
